statistic component, home teaser component image alignment fixes

--- a/missingkids/less/css/application.css
+++ b/missingkids/less/css/application.css
@@ -10243,12 +10243,13 @@ label.error {
 }
 .statistics-wrapper picture,
 .statistics-wrapper img {
-  max-width: none;
   position: absolute;
-  min-width: 100%;
   left: 0;
   top: 0;
-  width: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 .statistics-wrapper .statistics-content {
   text-align: center;
@@ -10337,9 +10338,10 @@ label.error {
 @media (max-width: 767px) {
   .home-teaser-wrapper picture,
   .home-teaser-wrapper img {
-    height: 100%;
     width: 100%;
-    overflow: hidden;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
   }
 }
 .home-teaser-wrapper .video-btn {
@@ -10528,9 +10530,10 @@ label.error {
   overflow: hidden;
 }
 .home-teaser-wrapper .home-teaser .panel .panel-heading img {
-  min-width: 100%;
-  min-height: 100%;
-  max-width: none;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 .home-teaser-wrapper .home-teaser .panel .panel-body {
   position: absolute;
