--- a/missingkids/less/statistics.less
+++ b/missingkids/less/statistics.less
@@ -10,12 +10,13 @@
     min-height: 245px;
   }
   picture, img {
-    max-width: none;
     position: absolute;
-    min-width: 100%;
     left: 0;
     top: 0;
-    width: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
   }
   .statistics-content {
     text-align: center;
